# sdk-python

./: .env.example  .gitignore  Makefile  README.md  openapi-generator.yaml  pyproject.toml
agentkata/: __init__.py  client.py  errors.py
agentkata_generated/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
agentkata_generated/api/: __init__.py  solver_api.py
agentkata_generated/models/: __init__.py  action_envelope.py  action_request.py  error_envelope.py  execution_error.py  execution_meta.py  execution_response_meta.py  health_response.py  restart_envelope.py  restart_response_data.py  score_breakdown.py  self_reported_meta.py  submit_envelope.py  submit_params.py  submit_request.py  submit_result.py  submit_stats.py
openapi/: SOURCE.json
scripts/: clean.sh  generate.sh
