[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkata"
version = "0.1.0"
description = "Python SDK for the AgentKata solver API"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AgentKata" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["agentkata", "sdk", "agents", "solver", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "urllib3>=2.1.0,<3.0.0",
  "python-dateutil>=2.8.2",
  "pydantic>=2",
  "typing-extensions>=4.7.1",
]

[project.urls]
Homepage = "https://github.com/agentkata/sdk-python"
Repository = "https://github.com/agentkata/sdk-python"
Issues = "https://github.com/agentkata/sdk-python/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agentkata", "agentkata.*", "agentkata_generated", "agentkata_generated.*"]

[tool.setuptools.package-data]
agentkata_generated = ["py.typed"]
